platformer/apps/active/adds/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app_environment_id: df862af4-039d-4905-93ed-5370571cc3d5
    env_id: 91e36890-ad6b-4f2e-beaf-7dffccbee445
    env_name: adds
    organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
    platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
    platformer_app_name: active
    platformer_component: rudder
    platformer_system: "true"
    project_id: 165f9b1a-b501-457f-902b-ac957491213c
  name: active
  namespace: sdfsd
spec:
  badConfig: asdas
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app_environment_id: df862af4-039d-4905-93ed-5370571cc3d5
    env_id: 91e36890-ad6b-4f2e-beaf-7dffccbee445
    env_name: adds
    organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
    platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
    platformer_app_name: active
    platformer_component: rudder
    platformer_system: "true"
    project_id: 165f9b1a-b501-457f-902b-ac957491213c
  type: ClusterIP
