platformer/apps/active/adds/ingress-fgd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    bbb: bbbb
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    platformer_ingress_id: 970b8188-d163-4178-a035-9ffc95d2dc2d
  labels:
    platformer_ingress_id: 970b8188-d163-4178-a035-9ffc95d2dc2d
  name: fgd
  namespace: sdfsd
spec:
  rules:
  - host: dsf
    http:
      paths:
      - backend:
          serviceName: active
          servicePort: 80
        path: /
  tls:
  - hosts:
    - dsf
    secretName: ""
