platformer/apps/active/adds/ingress-sdfdsf.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    platformer_ingress_id: ea42c7ff-a47a-440a-bdac-ed798d6b44f3
  labels:
    platformer_ingress_id: ea42c7ff-a47a-440a-bdac-ed798d6b44f3
  name: sdfdsf
  namespace: sdfsd
spec:
  rules:
  - host: sdfsdf
    http:
      paths:
      - backend:
          serviceName: active
          servicePort: 81
        path: /
  tls:
  - hosts:
    - sdfsdf
    secretName: ""
